--- a/design/example.org
+++ b/design/example.org
@@ -45,8 +45,8 @@ This document contains a motivating example solved by the Tyrell synthesizer.
 * Value Constraint (hard)
     - valCstParam(#2, 1) \in  (0 4): the first argument of method #2 is between 0 and 4 
     - valCstParam(#4, 2) = 12: the 2nd argument of method #4 is assigned 12
-    - valCstParam(#4, col(1), 3, '>=') : the 1st argument of #4 is table, and its size is greater or equal to the value of the 3rd argument in method #4. 
-    - valCstParam(#4, col(1), max(3), '>=') : the 1st argument of #4 is table, and its size is greater or equal to the max element of the 3rd argument of type ListType. 
+    - valCstParam(#4, col(1), 3, '>=') : the 1st argument of #4 is table, and its column number is greater or equal to the value of the 3rd argument of type ColIndexType. 
+    - valCstParam(#4, col(1), max(3), '>=') : the 1st argument of #4 is table, and its column number is greater or equal to the max element of the 3rd argument of type ListType. 
     
 * Value Choice (Soft)
     - valCParam(#1, 1) \in [1, 2]: for the first argument of #1, its values can be either 1 or 2
