squaresEnumerator - default parameters added in SQUARES object

--- a/jupyter-notebooks/demo.ipynb
+++ b/jupyter-notebooks/demo.ipynb
@@ -14,7 +14,8 @@
     "sys.path.append(\"..\")\n",
     "from squaresEnumerator import Squares\n",
     "s = Squares()\n",
-    "inputs = []"
+    "inputs = []\n",
+    "const, aggrs, attrs, loc = \"\", \"\", \"\", 0"
    ]
   },
   {
