--- a/jupyter-notebooks/example-1.ipynb
+++ b/jupyter-notebooks/example-1.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -11,7 +14,8 @@
     "sys.path.append(\"..\")\n",
     "from squaresEnumerator import Squares\n",
     "s = Squares()\n",
-    "inputs = []"
+    "inputs = []\n",
+    "const, aggrs, attrs, loc = \"\", \"\", \"\", 0"
    ]
   },
   {
