jupyter notebooks examples - better descriptions

--- a/jupyter-notebooks/demo.ipynb
+++ b/jupyter-notebooks/demo.ipynb
@@ -88,7 +88,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Optional] Constants:"
+    "[Optional] Constants. Constants can either be integers or strings. \n",
+    "- E.g. consts = \"Tire,1\""
    ]
   },
   {
@@ -104,7 +105,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Optional] Aggregators:"
+    "[Optional] Aggregators. The user can specify several SQL/R aggregators that will be used by desired query.\n",
+    "Aggregators available (operator -> SQL operator): \n",
+    "- max -> MAX; \n",
+    "- min -> MIN; \n",
+    "- mean -> AVG;\n",
+    "- sum -> SUM;\n",
+    "- like -> LIKE;\n",
+    "- concat/concat_grouped -> Concat;\n",
+    "- n -> COUNT( )\n",
+    "- max(n) -> to filter using the maximum number calculated using COUNT()\n",
+    "\n",
+    "For example to count the number of pnames the user should provide aggrs = \"n\"."
    ]
   },
   {
@@ -121,7 +133,7 @@
    "metadata": {},
    "source": [
     "[Optional] Here the user can insert certain attributes from the previous tables, that the query uses.\n",
-    "- E.g. attrs=\"level, F_name\"."
+    "- E.g. attrs=\"pname, sname\"."
    ]
   },
   {
@@ -137,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Optional] Number of operators:"
+    "[Optional] Number of operators. Number of SQL/R operators expected in the query."
    ]
   },
   {
@@ -234,7 +246,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
