--- a/jupyter-notebooks/example-1.ipynb
+++ b/jupyter-notebooks/example-1.ipynb
@@ -65,7 +65,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Optional] Constants:"
+    "[Optional] Constants.  Constants can either be integers or strings. \n",
+    "- E.g. consts = \"class2,f1\""
    ]
   },
   {
@@ -81,7 +82,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Optional] Aggregators:"
+    "[Optional] Aggregators. The user can specify several SQL/R aggregators that will be used by desired query.\n",
+    "Aggregators available (operator -> SQL operator): \n",
+    "- max -> MAX; \n",
+    "- min -> MIN; \n",
+    "- mean -> AVG;\n",
+    "- sum -> SUM;\n",
+    "- like -> LIKE;\n",
+    "- concat/concat_grouped -> Concat;\n",
+    "- n -> COUNT( )\n",
+    "- max(n) -> to filter using the maximum number calculated using COUNT()\n",
+    "\n",
+    "For example to count the number of classes taught by some teacher, the user should provide aggrs = \"n\"."
    ]
   },
   {
@@ -114,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Optional] Number of operators:"
+    "[Optional] Number of operators. Number of SQL/R operators expected in the query."
    ]
   },
   {
