jupyter notebook - tables with aggregators that can be used

--- a/jupyter-notebooks/demo.ipynb
+++ b/jupyter-notebooks/demo.ipynb
@@ -106,15 +106,18 @@
    "metadata": {},
    "source": [
     "[Optional] Aggregators. The user can specify several SQL/R aggregators that will be used by desired query.\n",
-    "Aggregators available (operator -> SQL operator): \n",
-    "- max -> MAX; \n",
-    "- min -> MIN; \n",
-    "- mean -> AVG;\n",
-    "- sum -> SUM;\n",
-    "- like -> LIKE;\n",
-    "- concat/concat_grouped -> Concat;\n",
-    "- n -> COUNT( )\n",
-    "- max(n) -> to filter using the maximum number calculated using COUNT()\n",
+    "Aggregators available: \n",
+    "\n",
+    "| Choices | SQL Operator |\n",
+    "|--|--|\n",
+    "| max| MAX|\n",
+    "| min | MIN|\n",
+    "| mean | AVG|\n",
+    "| sum | SUM|\n",
+    "| like | LIKE|\n",
+    "| concat/concat_grouped | Concat|\n",
+    "| n | COUNT( ) |\n",
+    "| max(n) | to filter using the maximum number calculated using COUNT( )|\n",
     "\n",
     "For example to count the number of pnames the user should provide aggrs = \"n\"."
    ]
