--- a/jupyter-notebooks/example-1.ipynb
+++ b/jupyter-notebooks/example-1.ipynb
@@ -83,17 +83,20 @@
    "metadata": {},
    "source": [
     "[Optional] Aggregators. The user can specify several SQL/R aggregators that will be used by desired query.\n",
-    "Aggregators available (operator -> SQL operator): \n",
-    "- max -> MAX; \n",
-    "- min -> MIN; \n",
-    "- mean -> AVG;\n",
-    "- sum -> SUM;\n",
-    "- like -> LIKE;\n",
-    "- concat/concat_grouped -> Concat;\n",
-    "- n -> COUNT( )\n",
-    "- max(n) -> to filter using the maximum number calculated using COUNT()\n",
+    "Aggregators available: \n",
     "\n",
-    "For example to count the number of classes taught by some teacher, the user should provide aggrs = \"n\"."
+    "| Choices | SQL Operator |\n",
+    "|--|--|\n",
+    "| max| MAX|\n",
+    "| min | MIN|\n",
+    "| mean | AVG|\n",
+    "| sum | SUM|\n",
+    "| like | LIKE|\n",
+    "| concat/concat_grouped | Concat|\n",
+    "| n | COUNT( ) |\n",
+    "| max(n) | to filter using the maximum number calculated using COUNT( )|\n",
+    "\n",
+    "For example to count the number of classes taught by some faculty the user should provide aggrs = \"n\"."
    ]
   },
   {
