notebook examples vldb 2020

--- a/jupyter-notebooks/example-vldb-2.ipynb
+++ b/jupyter-notebooks/example-vldb-2.ipynb
@@ -15,7 +15,7 @@
     "from squaresEnumerator import Squares\n",
     "s = Squares()\n",
     "inputs = []\n",
-    "const, aggrs, attrs, loc = \"\", \"\", \"\", 1"
+    "const, aggrs, attrs, loc = \"\", \"\", \"\", 0"
    ]
   },
   {
@@ -26,34 +26,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Parts\n",
-    "\n",
-    "|Id|Part Name (pname)| \n",
-    "|---|---|    \n",
-    "| 1 | Tire |    \n",
-    "| 2 | Suspension |\n",
-    "\n",
-    "- Supplier \n",
-    "\n",
-    "|Id|Supplier Name (sname)|\n",
-    "|---|---|\n",
-    "|1|Michelin|"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input0 = \"id,pname\\n1,Tire\\n2,Suspension\"\n",
+    "input0 = \"C_name,F_key\\nclass1,f1\\nclass2,f2\\nclass3,f1\\nclass4,f3\\nclass5,f4\"\n",
     "inputs.append(input0)\n",
     "\n",
-    "input1 = \"id,sname\\n1,Michelin\"\n",
-    "inputs.append(input1)\n"
+    "input1 = \"S_key,C_name\\nS1,class1\\nS2,class1\\nS3,class2\\nS3,class5\\nS4,class2\\nS4,class4\\nS5,class3\"\n",
+    "inputs.append(input1)\n",
+    "\n",
+    "input2 = \"F_key,F_name\\nf1,faculty1\\nf2,faculty2\\nf3,faculty3\\nf4,faculty4\"\n",
+    "inputs.append(input2)\n",
+    "\n",
+    "input3 = \"S_key,S_name,level\\nS1,stu1,JR\\nS2,stu2,SR\\nS3,stu3,JR\\nS4,stu4,SR\\nS5,stu5,JR\"\n",
+    "inputs.append(input3)"
    ]
   },
   {
@@ -61,18 +49,7 @@
    "metadata": {},
    "source": [
     "Here the user specifies the output table, using a string and \"\\n\" represents the end of a line.\n",
-    "E.g. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Output\n",
-    "\n",
-    "|Part Name (pname)| \n",
-    "|---|    \n",
-    "|Tire |    "
+    "The following table is:\n"
    ]
   },
   {
@@ -81,15 +58,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output=\"pname\\nTire\""
+    "output=\"n\\n2\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Optional] Constants. Constants can either be integers or strings. \n",
-    "- E.g. consts = \"Tire,1\""
+    "[Optional] Constants.  Constants can either be integers or strings. \n",
+    "- E.g. consts = \"class2,f1\""
    ]
   },
   {
@@ -98,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consts=\"\""
+    "consts=\"faculty1, JR\""
    ]
   },
   {
@@ -119,7 +96,7 @@
     "| n | COUNT( ) |\n",
     "| max(n) | to filter using the maximum number calculated using COUNT( )|\n",
     "\n",
-    "For example to count the number of pnames the user should provide aggrs = \"n\"."
+    "For example to count the number of classes taught by some faculty the user should provide aggrs = \"n\"."
    ]
   },
   {
@@ -128,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggrs=\"\""
+    "aggrs=\"n\""
    ]
   },
   {
@@ -136,7 +113,7 @@
    "metadata": {},
    "source": [
     "[Optional] Here the user can insert certain attributes from the previous tables, that the query uses.\n",
-    "- E.g. attrs=\"pname, sname\"."
+    "- E.g. attrs=\"level, F_name\"."
    ]
   },
   {
@@ -145,7 +122,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "attrs=\"\""
+    "attrs=\"level, F_name, S_name\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Optional] Number of operators. Number of SQL/R operators expected in the query."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc=3"
    ]
   },
   {
@@ -157,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,20 +166,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT `pname`\n",
+      "SELECT DISTINCT `S_name`\n",
       "FROM\n",
-      "  (SELECT `id`,\n",
-      "          `pname`,\n",
-      "          `sname`\n",
-      "   FROM `input0` AS `LHS`\n",
-      "   INNER JOIN `input1` AS `RHS` ON (`LHS`.`id` = `RHS`.`id`))\n"
+      "  (SELECT `S_key`,\n",
+      "          `C_name`,\n",
+      "          `F_key`,\n",
+      "          `S_name`,\n",
+      "          `level`,\n",
+      "          `F_name`\n",
+      "   FROM\n",
+      "     (SELECT `S_key`,\n",
+      "             `C_name`,\n",
+      "             `F_key`,\n",
+      "             `S_name`,\n",
+      "             `level`\n",
+      "      FROM\n",
+      "        (SELECT `S_key`,\n",
+      "                `C_name`,\n",
+      "                `F_key`\n",
+      "         FROM `input1` AS `LHS`\n",
+      "         INNER JOIN `input0` AS `RHS` ON (`LHS`.`C_name` = `RHS`.`C_name`)) AS `LHS`\n",
+      "      INNER JOIN `input3` AS `RHS` ON (`LHS`.`S_key` = `RHS`.`S_key`)) AS `LHS`\n",
+      "   INNER JOIN `input2` AS `RHS` ON (`LHS`.`F_key` = `RHS`.`F_key`))\n",
+      "WHERE (`level` = 'JR'\n",
+      "       AND `F_name` = 'faculty1')\n"
      ]
     }
    ],
@@ -207,15 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RET_DF13 <- inner_join(input0, input1)\n",
-      "RET_DF14 <- RET_DF13 %>% ungroup() %>% select(pname)\n",
+      "RET_DF1400 <- inner_join(inner_join(inner_join(input1, input0), input3), input2)\n",
+      "RET_DF1401 <- RET_DF1400 %>% ungroup() %>% filter(level == \"JR\" & F_name == \"faculty1\")\n",
+      "RET_DF1402 <- RET_DF1401 %>% ungroup() %>% select(S_name) %>% distinct()\n",
       "\n"
      ]
     }
