--- a/jupyter-notebooks/example-vldb-harry-potter.ipynb
+++ b/jupyter-notebooks/example-vldb-harry-potter.ipynb
@@ -29,18 +29,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Parts\n",
+    "- Faculty \n",
     "\n",
-    "|Id|Part Name (pname)| \n",
-    "|---|---|    \n",
-    "| 1 | Tire |    \n",
-    "| 2 | Suspension |\n",
-    "\n",
-    "- Supplier \n",
-    "\n",
-    "|Id|Supplier Name (sname)|\n",
+    "|F_key|F_name|\n",
     "|---|---|\n",
-    "|1|Michelin|"
+    "|f1|Snape|\n",
+    "|f2|Flitwick|\n",
+    "|f3|Sprout|\n",
+    "|f4|McGonagall|\n",
+    "\n",
+    "- Class\n",
+    "\n",
+    "|C_name|F_key| \n",
+    "|---|---|    \n",
+    "| Potions | f1 |    \n",
+    "| Charms | f2 |\n",
+    "| Dark Arts | f1 |\n",
+    "| Herbology | f3 |\n",
+    "| Transfiguration | f4 |\n",
+    "\n",
+    "- Student \n",
+    "\n",
+    "|S_key|S_name|level|\n",
+    "|---|---|---|\n",
+    "|S1|Harry|JR|\n",
+    "|S2|George|SR|\n",
+    "|S3|Ron|JR|\n",
+    "|S4|Fred|SR|\n",
+    "|S5|Hermione|JR|\n",
+    "\n",
+    "- Enrolled \n",
+    "\n",
+    "|S_key|C_name|\n",
+    "|---|---|\n",
+    "|S1|Potions|\n",
+    "|S2|Potions|\n",
+    "|S3|Charms|\n",
+    "|S3|Transfiguration|\n",
+    "|S4|Charms|\n",
+    "|S4|Herbology|\n",
+    "|S5|Dark Arts|\n"
    ]
   },
   {
@@ -49,11 +77,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input0 = \"id,pname\\n1,Tire\\n2,Suspension\"\n",
+    "input0 = \"C_name,F_key\\nPotions,f1\\nCharms,f2\\nDarkArts,f1\\nHerbology,f3\\nTransfiguration,f4\"\n",
     "inputs.append(input0)\n",
     "\n",
-    "input1 = \"id,sname\\n1,Michelin\"\n",
-    "inputs.append(input1)\n"
+    "input1 = \"S_key,C_name\\nS1,Potions\\nS2,Potions\\nS3,Charms\\nS3,Transfiguration\\nS4,Charms\\nS4,Herbology\\nS5,DarkArts\"\n",
+    "inputs.append(input1)\n",
+    "\n",
+    "input2 = \"F_key,F_name\\nf1,Snape\\nf2,Flitwick\\nf3,Sprout\\nf4,McGonagall\"\n",
+    "inputs.append(input2)\n",
+    "\n",
+    "input3 = \"S_key,S_name,level\\nS1,Harry,JR\\nS2,George,SR\\nS3,Ron,JR\\nS4,Fred,SR\\nS5,Hermione,JR\"\n",
+    "inputs.append(input3)"
    ]
   },
   {
@@ -61,18 +95,18 @@
    "metadata": {},
    "source": [
     "Here the user specifies the output table, using a string and \"\\n\" represents the end of a line.\n",
-    "E.g. "
+    "The following table is:\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Output\n",
+    "- Output \n",
     "\n",
-    "|Part Name (pname)| \n",
-    "|---|    \n",
-    "|Tire |    "
+    "|n|\n",
+    "|---|\n",
+    "|2|"
    ]
   },
   {
@@ -81,15 +115,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output=\"pname\\nTire\""
+    "output=\"n\\n2\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Optional] Constants. Constants can either be integers or strings. \n",
-    "- E.g. consts = \"Tire,1\""
+    "[Optional] Constants.  Constants can either be integers or strings. \n",
+    "- E.g. consts = \"class2,f1\""
    ]
   },
   {
@@ -98,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consts=\"\""
+    "consts=\"Snape, JR\""
    ]
   },
   {
@@ -119,7 +153,7 @@
     "| n | COUNT( ) |\n",
     "| max(n) | to filter using the maximum number calculated using COUNT( )|\n",
     "\n",
-    "For example to count the number of pnames the user should provide aggrs = \"n\"."
+    "For example to count the number of classes taught by some faculty the user should provide aggrs = \"n\"."
    ]
   },
   {
@@ -128,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggrs=\"\""
+    "aggrs=\"n\""
    ]
   },
   {
@@ -136,7 +170,7 @@
    "metadata": {},
    "source": [
     "[Optional] Here the user can insert certain attributes from the previous tables, that the query uses.\n",
-    "- E.g. attrs=\"pname, sname\"."
+    "- E.g. attrs=\"level, F_name\"."
    ]
   },
   {
@@ -145,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "attrs=\"\""
+    "attrs=\"level,F_name,S_name\""
    ]
   },
   {
@@ -180,13 +214,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT `pname`\n",
+      "SELECT `n`\n",
       "FROM\n",
-      "  (SELECT `id`,\n",
-      "          `pname`,\n",
-      "          `sname`\n",
-      "   FROM `input0` AS `LHS`\n",
-      "   INNER JOIN `input1` AS `RHS` ON (`LHS`.`id` = `RHS`.`id`))\n"
+      "  (SELECT `F_name`,\n",
+      "          `level`,\n",
+      "          COUNT() AS `n`\n",
+      "   FROM\n",
+      "     (SELECT `F_key`,\n",
+      "             `F_name`,\n",
+      "             `C_name`,\n",
+      "             `S_key`,\n",
+      "             `S_name`,\n",
+      "             `level`\n",
+      "      FROM\n",
+      "        (SELECT `F_key`,\n",
+      "                `F_name`,\n",
+      "                `C_name`,\n",
+      "                `S_key`\n",
+      "         FROM\n",
+      "           (SELECT `F_key`,\n",
+      "                   `F_name`,\n",
+      "                   `C_name`\n",
+      "            FROM `input2` AS `LHS`\n",
+      "            INNER JOIN `input0` AS `RHS` ON (`LHS`.`F_key` = `RHS`.`F_key`)) AS `LHS`\n",
+      "         INNER JOIN `input1` AS `RHS` ON (`LHS`.`C_name` = `RHS`.`C_name`)) AS `LHS`\n",
+      "      INNER JOIN `input3` AS `RHS` ON (`LHS`.`S_key` = `RHS`.`S_key`))\n",
+      "   GROUP BY `F_name`,\n",
+      "            `level`)\n",
+      "WHERE (`F_name` = 'Snape'\n",
+      "       AND `level` = 'JR')\n"
      ]
     }
    ],
@@ -214,8 +270,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RET_DF13 <- inner_join(input0, input1)\n",
-      "RET_DF14 <- RET_DF13 %>% ungroup() %>% select(pname)\n",
+      "RET_DF8379 <- inner_join(inner_join(inner_join(input2, input0), input1), input3)\n",
+      "RET_DF8380 <- RET_DF8379 %>% group_by(F_name, level) %>% summarise(n = n())\n",
+      "RET_DF8381 <- RET_DF8380 %>% ungroup() %>% filter(F_name == \"Snape\" & level == \"JR\")\n",
+      "RET_DF8382 <- RET_DF8381 %>% ungroup() %>% select(n)\n",
       "\n"
      ]
     }
@@ -223,13 +281,6 @@
    "source": [
     "print(R_Query)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
