--- a/jupyter-notebooks/example-vldb-1.ipynb
+++ b/jupyter-notebooks/example-vldb-1.ipynb
@@ -15,7 +15,7 @@
     "from squaresEnumerator import Squares\n",
     "s = Squares()\n",
     "inputs = []\n",
-    "const, aggrs, attrs, loc = \"\", \"\", \"\", 0"
+    "const, aggrs, attrs, loc = \"\", \"\", \"\", 1"
    ]
   },
   {
@@ -26,22 +26,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Grades\n",
+    "\n",
+    "|Id|Grade| \n",
+    "|---|---|    \n",
+    "| 101 | 8 |    \n",
+    "| 102 | 11 |\n",
+    "| 103 | 15 |\n",
+    "| 104 | 7 |\n",
+    "| 105 | 18 |\n",
+    "| 106 | 10 |\n",
+    "\n",
+    "<!-- - Supplier \n",
+    "\n",
+    "|Id|Supplier Name (sname)|\n",
+    "|---|---|\n",
+    "|1|Michelin| -->"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input0 = \"C_name,F_key\\nclass1,f1\\nclass2,f2\\nclass3,f1\\nclass4,f3\\nclass5,f4\"\n",
-    "inputs.append(input0)\n",
-    "\n",
-    "input1 = \"S_key,C_name\\nS1,class1\\nS2,class1\\nS3,class2\\nS3,class5\\nS4,class2\\nS4,class4\\nS5,class3\\nS6,class3\\nS6,class2\\nS7,class5\\nS8,class4\"\n",
-    "inputs.append(input1)\n",
-    "\n",
-    "input2 = \"F_key,F_name\\nf1,faculty1\\nf2,faculty2\\nf3,faculty3\\nf4,faculty4\"\n",
-    "inputs.append(input2)\n",
-    "\n",
-    "input3 = \"S_key,S_name,level\\nS1,stu1,JR\\nS2,stu2,SR\\nS3,stu3,JR\\nS4,stu4,SR\\nS5,stu5,JR\\nS6,stu6,SR\\nS7,stu7,JR\\nS8,stu8,JR\"\n",
-    "inputs.append(input3)"
+    "input0 = \"id,grade\\n101,8\\n102,11\\n103,15\\n104,7\\n105,18\\n106,10\"\n",
+    "inputs.append(input0)\n"
    ]
   },
   {
@@ -49,7 +62,21 @@
    "metadata": {},
    "source": [
     "Here the user specifies the output table, using a string and \"\\n\" represents the end of a line.\n",
-    "The following table is:\n"
+    "E.g. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Output\n",
+    "\n",
+    "|Id| \n",
+    "|---|    \n",
+    "|102 |    \n",
+    "|103 |    \n",
+    "|105 |    \n",
+    "|106 |    "
    ]
   },
   {
@@ -58,15 +85,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output=\"S_name\\nstu1\\nstu5\""
+    "output=\"id\\n102\\n103\\n105\\n106\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Optional] Constants.  Constants can either be integers or strings. \n",
-    "- E.g. consts = \"class2,f1\""
+    "[Optional] Constants. Constants can either be integers or strings. \n",
+    "- E.g. consts = \"Tire,1\""
    ]
   },
   {
@@ -75,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consts=\"faculty1, JR\""
+    "consts=\"10\""
    ]
   },
   {
@@ -96,7 +123,7 @@
     "| n | COUNT( ) |\n",
     "| max(n) | to filter using the maximum number calculated using COUNT( )|\n",
     "\n",
-    "For example to count the number of classes taught by some faculty the user should provide aggrs = \"n\"."
+    "For example to count the number of pnames the user should provide aggrs = \"n\"."
    ]
   },
   {
@@ -105,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggrs=str()"
+    "aggrs=\"\""
    ]
   },
   {
@@ -113,7 +140,7 @@
    "metadata": {},
    "source": [
     "[Optional] Here the user can insert certain attributes from the previous tables, that the query uses.\n",
-    "- E.g. attrs=\"level, F_name\"."
+    "- E.g. attrs=\"pname, sname\"."
    ]
   },
   {
@@ -122,23 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "attrs=\"level, F_name\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Optional] Number of operators. Number of SQL/R operators expected in the query."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loc=3"
+    "attrs=\"grade\""
    ]
   },
   {
@@ -150,11 +161,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "R_Query, SQL_Query = s.synthesize(inputs,output,consts,aggrs,attrs,loc)"
+    "R_Query, SQL_Query = s.synthesize(inputs,output,consts,aggrs,attrs,1)"
    ]
   },
   {
@@ -166,36 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT `S_name`\n",
-      "FROM\n",
-      "  (SELECT `C_name`,\n",
-      "          `F_key`,\n",
-      "          `S_key`,\n",
-      "          `F_name`,\n",
-      "          `S_name`,\n",
-      "          `level`\n",
-      "   FROM\n",
-      "     (SELECT `C_name`,\n",
-      "             `F_key`,\n",
-      "             `S_key`,\n",
-      "             `F_name`\n",
-      "      FROM\n",
-      "        (SELECT `C_name`,\n",
-      "                `F_key`,\n",
-      "                `S_key`\n",
-      "         FROM `input0` AS `LHS`\n",
-      "         INNER JOIN `input1` AS `RHS` ON (`LHS`.`C_name` = `RHS`.`C_name`)) AS `LHS`\n",
-      "      INNER JOIN `input2` AS `RHS` ON (`LHS`.`F_key` = `RHS`.`F_key`)) AS `LHS`\n",
-      "   INNER JOIN `input3` AS `RHS` ON (`LHS`.`S_key` = `RHS`.`S_key`))\n",
-      "WHERE (`F_name` = 'faculty1'\n",
-      "       AND `level` = 'JR')\n"
+      "SELECT DISTINCT `id`\n",
+      "FROM `input0`\n",
+      "WHERE (`grade` >= 10.0)\n"
      ]
     }
    ],
@@ -216,16 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RET_DF15 <- inner_join(inner_join(inner_join(input0, input1), input2), input3)\n",
-      "RET_DF16 <- RET_DF15 %>% ungroup() %>% filter(F_name == \"faculty1\" & level == \"JR\")\n",
-      "RET_DF17 <- RET_DF16 %>% ungroup() %>% select(S_name)\n",
+      "RET_DF6 <- input0 %>% ungroup() %>% filter(grade >= 10)\n",
+      "RET_DF7 <- RET_DF6 %>% ungroup() %>% select(id) %>% distinct()\n",
       "\n"
      ]
     }
@@ -233,13 +223,6 @@
    "source": [
     "print(R_Query)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -258,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
